--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 Full Name
               </label>
               <input
-                class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                class="form-control"
                 id="name"
                 type="text"
                 placeholder="Enter your full name"
@@ -49,7 +49,7 @@
                 Date of Birth
               </label>
               <input
-                class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                class="form-control"
                 id="dob"
                 type="date"
                 placeholder="Enter your date of birth"
@@ -64,7 +64,7 @@
                 Identification Number
               </label>
               <input
-                class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                class="form-control"
                 id="id"
                 type="text"
                 placeholder="Enter your identification number"
@@ -79,12 +79,22 @@
                 Address
               </label>
               <input
-                class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                class="form-control"
                 id="addr"
                 type="text"
                 placeholder="Enter your address"
                 x-model="userData.addr"
               />
+            </div>
+            <div class="form-check mb-3">
+              <label class="form-check-label">
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  name="remember"
+                />
+                I agree with everything i write
+              </label>
             </div>
             <button class="submit-btn" type="submit">Next</button>
           </form>
@@ -103,7 +113,7 @@
               >
                 <div class="mb-4">
                   <p x-text="question.text" class="font-bold"></p>
-                  <div class="flex items-center">
+                  <div class="flex justify-content-start">
                     <input
                       type="radio"
                       :name="`question-${index}`"
@@ -208,7 +218,7 @@
                 <div class="mb-4">
                   <p x-text="question.text" class="font-bold text-gray-700"></p>
                   <textarea
-                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                    class="form-control"
                     rows="3"
                     x-model="question.answer"
                   ></textarea>
@@ -237,9 +247,9 @@
         </div> -->
         <div x-show="step === 6" class="text-left">
           <h2 class="text-2xl font-bold mb-4 text-center">Answer</h2>
-          <div class="mb-8">
+          <div class="mb-8 answer-content">
             <template x-for="(question, index) in allQuestions" :key="index">
-              <div class="mb-6 bg-white p-4 rounded-md shadow">
+              <div class="mb-6 bg-light-subtle p-4 rounded-md">
                 <p x-text="question.text" class="font-bold mb-2"></p>
                 <!-- Display answer based on question type -->
                 <template x-if="Array.isArray(question.answer)">
